park the old pdf viewer as /document_old

--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -80,7 +80,7 @@
                 </template>
                 <template v-slot:item.hash="{ item }">
                     <v-row>
-                        <a :href="base_url + 'document/' + item.hash"
+                        <a :href="base_url + 'document_old/' + item.hash"
                             target="_blank"
                             :style="{'text-decoration': 'none'}"
                             class="ma-1" title="View document">
