add rudimental log for the extraction process

--- a/supercon2/templates/index.html
+++ b/supercon2/templates/index.html
@@ -47,7 +47,8 @@
                     <li><a href="{{ url_for('supercon.get_automatic_database') }}">Database</a></li>
                     <li><a href="{{ url_for('supercon.get_stats') }}">Statistics</a></li>
                     <li><a href="{{ url_for('supercon.get_training_data') }}">Training data management</a></li>
-                    <li><a href="{{ url_for('supercon.get_correction_log') }}">Data correction log</a></li>
+                    <li><a href="{{ url_for('supercon.get_curation_log') }}">Data correction log</a></li>
+                    <li><a href="{{ url_for('supercon.get_process_log') }}">Automatic data processing log</a></li>
                     <li><a href="http://falcon.nims.go.jp/superconductors" target="_blank">Grobid superconductors</a>
                     <li><a href="https://github.com/lfoppiano/supercon2">GitHub repository</a></li>
                     </li>
