--- a/supercon2/templates/database.html
+++ b/supercon2/templates/database.html
@@ -35,7 +35,6 @@
                 <v-select v-model="selectedHeaders" :items="headers" label="Select Columns" multiple outlined
                     return-object>
                 </v-select>
-{#                <v-btn @click="openCreateItemDialog" Depressed class="ma-2">New Item</v-btn>#}
             </v-row>
             <v-data-table v-model="selectedItems" :headers="showHeaders" :items="items" :dense="true" single-select
                 loading-text="loading ..." :loading="isLoading" :multi-sort="true" class="elevation-1" :item-class="getItemClass"
@@ -205,7 +204,9 @@
     <script src="https://cdn.jsdelivr.net/npm/vuetify@2.6.3/dist/vuetify.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/axios@0.26.1/dist/axios.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/mathjs@11.3.1/lib/browser/math.min.js"></script>
-    <script>
+    <script type="module">
+        import { shortcutKeys } from "{{ url_for('static', filename='grobid/shortcut-keys.js')}}"
+
         let itemClassStore = {
             class: 'bg-white',
             hashes: [],
@@ -222,36 +223,7 @@
                         shouldShow: false,
                     },
                     shouldShowShortcutKeysDialog: false,
-                    shortcutKeys: [
-                        {
-                            name: 'n',
-                            text: 'Add new record (in the same document of the selected record)'
-                        }, {
-                            name: 'e',
-                            text: 'Edit the selected record'
-                        }, {
-                            name: '⌘ + Enter',
-                            text: 'Save the record on the edit dialog (Mac)'
-                        }, {
-                            name: 'Ctrl + Enter',
-                            text: 'Save the record on the edit dialog (Win)'
-                        }, {
-                            name: 'ArrowUp',
-                            text: 'Move selection up one record'
-                        }, {
-                            name: 'ArrowDown',
-                            text: 'Move selection down one record'
-                        }, {
-                            name: 'enter',
-                            text: 'Flag/unflag the selected record'
-                        }, {
-                            name: '?',
-                            text: 'Show the keyboard shortcuts dialog',
-                        }, {
-                            name: 'esc',
-                            text: 'Close this dialog',
-                        }
-                    ],
+                    shortcutKeys,
                     isLoading: true,
                     version: 'unknown version',
                     editedItem: {},
