--- a/supercon2/templates/curation_log.html
+++ b/supercon2/templates/curation_log.html
@@ -245,7 +245,7 @@
                                 'all', 'new', 'curated', 'validated', 'invalid', 'obsolete', 'removed'
                             ]
                         },
-                        { text: 'Actions', value: 'actions', sortable: false, hidden: false },
+                        { text: 'Actions', value: 'actions', sortable: false, hidden: true },
                         // { text: 'Doc URL', value: 'doc_url', hidden: true},
                         // { text: 'ID', value: 'id', hidden: true},
                         // { text: 'Material ID', value: 'materialId', hidden: true},
