--- a/supercon2/templates/process_log.html
+++ b/supercon2/templates/process_log.html
@@ -173,6 +173,7 @@
                         { text: 'Name', value: 'name', hidden: true, filter: this.nameFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Message', value: 'message', hidden: false, filter: this.nameFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Service', value: 'service', hidden: false, filter: this.nameFilter, filterKeyword: '', shouldHideEmpty: false },
+                        { text: 'Path', value: 'path', hidden: false, filter: this.nameFilter, filterKeyword: '', shouldHideEmpty: false },
                         { text: 'Formula', value: 'formula', hidden: true, filter: this.formulaFilter, filterKeyword: '', shouldHideEmpty: false , width: 150 },
                         { text: 'Space Group', value: 'spaceGroup', hidden: true, filter: this.spaceGroupFilter, filterKeyword: '', shouldHideEmpty: false },
                         // { text: 'Space Group ID', value: 'spaceGroupId', hidden: true },
@@ -247,7 +248,7 @@
                                 'all', 'any error'
                             ]
                         },
-                        { text: 'Actions', value: 'actions', sortable: false, hidden: false },
+                        { text: 'Actions', value: 'actions', sortable: false, hidden: true },
                         // { text: 'Doc URL', value: 'doc_url', hidden: true},
                         // { text: 'ID', value: 'id', hidden: true},
                         // { text: 'Material ID', value: 'materialId', hidden: true},
