avoids side-by-side PDFs on wide screens

--- a/supercon2/templates/document.html
+++ b/supercon2/templates/document.html
@@ -909,6 +909,7 @@
                             pdfViewer.append(canvas)
                             canvas.height = viewport.height;
                             canvas.width = viewport.width;
+                            canvas.style.display = 'block'
 
                             const renderContext = {
                                 canvasContext: context,
